[project]
name = "litestarcatscv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "advanced-alchemy>=0.32.2",
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "granian>=1.7.6",
    "litestar[jwt]>=2.15.1",
    "litestar-asyncpg>=0.3.0",
    "msgspec>=0.19.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pyyaml>=6.0.2",
    "ruff>=0.9.4",
    "sqlalchemy>=2.0.38",
    "passlib[bcrypt]>=1.7.4",
    "redis[hiredis]>=5.2.1",
    "coverage>=7.8.0",
    "jinja2>=3.1.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py313"
lint.ignore = ["F821"]

[tool.ruff.lint.flake8-type-checking]
# Add quotes around type annotations, if doing so would allow
# an import to be moved into a type-checking block.
quote-annotations = true
